增加了 “加法”功能 修改了 部分Button的UI 简单的两数加法(可循环相加) 将乘除法按钮图标修改为数学符号

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             />
         <Button
             android:id="@+id/bt_div"
-            android:text="/"
+            android:text="÷"
             android:textSize="40sp"
 
             />
@@ -72,7 +72,7 @@
 
         <Button
             android:id="@+id/bt_mul"
-            android:text="*"
+            android:text="×"
             android:textSize="40sp"
 
             />
