--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
+        android:maxLines="1"
         android:paddingHorizontal="30sp"
         android:text="0"
         android:textSize="60sp" />
