--- a/app/src/main/res/layout/activity_trans.xml
+++ b/app/src/main/res/layout/activity_trans.xml
@@ -1,9 +1,198 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="bottom"
     tools:context=".TransActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="top">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="left">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label2_tx"
+                android:text="Bin:"
+                android:gravity="left"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:textSize="40sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label8_tx"
+                android:text="Oct:"
+                android:gravity="left"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:textSize="40sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label16_tx"
+                android:text="Hex:"
+                android:gravity="left"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:textSize="40sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label10_tx"
+                android:text="Dec:"
+                android:gravity="left"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:textSize="40sp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="right">
+            <TextView
+                android:id="@+id/ans2_tx"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:text="0"
+                android:textSize="40sp"/>
+            <TextView
+                android:id="@+id/ans8_tx"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:text="0"
+                android:textSize="40sp"/>
+            <TextView
+                android:id="@+id/ans16_tx"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:text="0"
+                android:textSize="40sp"/>
+            <TextView
+                android:id="@+id/ans10_tx"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:maxLines="1"
+                android:paddingHorizontal="10sp"
+                android:text="0"
+                android:textSize="40sp"/>
+        </LinearLayout>
+
+    </LinearLayout>
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:columnCount="4"
+        android:orientation="horizontal"
+        android:rowCount="3"
+        android:padding="10sp"
+        tools:context=".TransActivity">
+
+
+        <Button
+            android:id="@+id/bt_num7"
+            android:text="7"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num8"
+            android:text="8"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num9"
+            android:text="9"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_clear"
+            android:text="AC"
+            android:textSize="40sp"
+            android:layout_rowSpan="2"
+            android:layout_gravity="fill_vertical"
+            android:textColor="#ff0000"
+            />
+
+        <Button
+            android:id="@+id/bt_num4"
+            android:text="4"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num5"
+            android:text="5"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num6"
+            android:text="6"
+            android:textSize="40sp"
+
+            />
+
+
+
+        <Button
+            android:id="@+id/bt_num1"
+            android:text="1"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num2"
+            android:text="2"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num3"
+            android:text="3"
+            android:textSize="40sp"
+
+            />
+
+        <Button
+            android:id="@+id/bt_num0"
+            android:text="0"
+            android:textSize="40sp"
+
+            />
+
+    </GridLayout>
+
+
+
+</LinearLayout>
